fix: will now work even if  "AWS_CLI_AUTO_PROMPT=on" is set in the current shell (#2)
feat: added init project command for python and typescript cdk projects
chore: upgraded dependencies
chore: set version 2.5.9